# youtube-music-discord-rpc

./: Cargo.toml  LICENSE  README.md
src/: main.rs
