[package]
name = "youtube-music-discord-rpc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Discord Rich Presence for Youtube Music activity in any browser"
readme = "README.md"
keywords = ["discord", "youtube-music", "rich-presence",  "discord-rpc"]

[dependencies]
discord-rpc-client = "0.4.0"
playerctl-rust-wrapper = "0.1.0"
regex = "1.11.1"
